[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-sessions"
version = "0.1.0"
description = "TUI to browse, inspect and resume Claude Code sessions"
requires-python = ">=3.9"

[project.scripts]
claude-code-sessions = "claude_sessions:main"
